# motionfix272

./: .gitignore  README.md  pyproject.toml  requirements.txt
motionfix272/: __init__.py  audit.py  convert.py
scripts/: audit_motionfix_hml272.sh  convert_motionfix_to_hml272.sh
